appId: com.example.study_app
---
- launchApp:
    clearState: true
- tapOn: "Qiita Api Test Composable"
#- waitForAnimationToEnd
- extendedWaitUntil:
      visible: "Loading..."
      timeout: 10000
- assertVisible: "Loading..."
- extendedWaitUntil:
    visible: "LoadFinish"
    timeout: 10000
- assertVisible: "LoadFinish"
- back